# muuuh-recruiting-chatbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  seeds.py
app/api/: admin.py  callbacks.py  webhook.py
app/core/: conversation.py  flow_engine.py  intent_handler.py  process_flow.py  scoring.py  worker.py
app/db/: crud.py  database.py
app/models/: conversation.py  lead.py
app/services/: cv_analyzer.py  document_service.py  openai_service.py  twilio_service.py
app/static/css/: styles.css
app/templates/: dashboard.html
app/templates/admin/: _lead_drawer.html  base.html  board.html  detail.html  index.html
app/utils/: document_processor.py  logger.py
app/workers/: document_worker.py
data/: intents.json  muuh_info.json
docs/: AI_BRIEFING.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md
scripts/: check_prod_startup.py  reset_db_state.py  setup.sh  setup_db.py  test_conversation.py
tests/: test_intents.py  test_webhook.py
